public/style.css
/*
/*extra small devices -- */
@media only screen and (max-width: 633px)
{
    #forecastIconContainer {width: 100%;}
    #icon {width: 100%;}
    .fcIcon {width: 49%; height: 100%;}
}
/*small devices -- portrait tablets and large phones*/
@media only screen and (min-width: 633px)
{
    #forecastIconContainer {width: 100%;}
    #icon {width: 100%;}
    .fcIcon {width: 40%; height: 100%;}
}
/*small devices -- portrait tablets and large phones*/
@media only screen and (min-width: 768px)
{
    #forecastIconContainer {width: 100%;}
    #icon {width: 70%;}
    .fcIcon {width: 40%; height: 100%;}
}
/*small devices -- portrait tablets and large phones*/
@media only screen and (min-width: 992px)
{
    #forecastIconContainer {width: 100%;}
    #icon {width: 60%;}
    .fcIcon {width: 30%; height: 100%;}
}
/*small devices -- portrait tablets and large phones*/
@media only screen and (min-width: 1200px)
{
    #container1 {width: 100%;}
    #forecastIconContainer {width: 100%;}
    .fcIcon {width: 16%; height: 10%;}
}

html
{
    font-family: "Avenir Next", sans-serif;

}
body
{
    margin: 0 auto;
}
::-webkit-scrollbar {
    width: 0px;
    background: transparent; /* make scrollbar transparent */
}
h1, h3{
    font-weight: 100;
}





.btn
{
  border: none;
  text-decoration: none;
  color: white;
  cursor: pointer;
  box-shadow: none !important;
}
.btn:hover
{
  color: white;
}
.forecast
{
    display: inline-block;
}
#container
{
    display: inline-block;
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
}

#container1
{
    padding-bottom: 3px;
    background-color: #FAFAFA;
    width: 100%;
}
#container2
{
    position: relative;
    width: 100%;
    height: 100%;
}
#forecastIconContainer
{
    padding-top: 20px;
    text-align: center;
}
.forecastIcon
{
    width: 50%;
    height: 100%;
    display: inline-block;
}
#icon
{

    position: relative;
}
.dayDate
{
    font-size: 30px;
    display: inline-block;
    text-align: center;
}
#temp
{
    font-size: 80px;
}
 #summary
{
    font-size: 45px;
    padding-left: 5%;
}
.fcIcon
{
    display: inline-block;
    font-size: 25px;
    vertical-align: top;
}
#weeklyForecast
{
    font-size: 30px;
}
#weeklyFcTitle
{
    font-size: 35px;
    text-align: center;
}
hr
{
    width: 75%;
}
.currentHighLow
{
    font-size: 25px;
}
#and
{
    font-size: 30px;
    padding-left: 19%;
}
.fcSumBottom
{
    bottom: 0;
}
#canvasContainer
{
    text-align: center;
    min-width: 20px;
    min-height: 20px;

}
#currentSumContainer
{
    float: inherit;
    position: relative;
    display: inline-block;
    vertical-align: top;
}
#currentHigh, #currentHighLow
{
  padding-left: 2%;
}
.currentHighLow
{
    padding-left: 5%;
}




/* LOGIN PAGE */
* {
  box-sizing: border-box;
}


.login-form, .register-form
{
  max-width: 100%;
  width: 370px;
  padding 15px;
  margin: auto;
}
#forgotPass, #login, label
{
  font-family: "Avenir Next", sans-serif;
  font-weight: lighter;
}
.form-control
{
  font-size: 15px;
  min-height: 48px;
  font-weight: 500;
}
.form-control:focus
{
  border-color:#00DFD8;
  box-shadow: 0 0 0 0.2rem rgba(0, 223, 216);
}
.forgot-link label
{
    margin-bottom: 0;
}
.login-form a,
.register-form a
{
  text-decoration: none;
  color: #666;
}
.login-form a:hover,
.register-form a:hover
{
  color: #00DFD8;
}
.btn-custom
{
  background: #00DFD8;
  border-color: #00DFD8;
  color: #fff;
  font-size: 15px;
  font-weight: 600;
  min-height: 48px;
}
btn-custom:focus,
btn-custom:hover,
btn-custom:active,
btn-custom:active:focus
{
  background: #00DFD8;
  border-color: #00DFD8;
  color: #fff;
}
.btn-custom:focus
{
  box-shadow: 0 0 0 0.2rem rgba(114,61,190, .25);
}
.me
{
  color: #00DFD8;
}
#login
{
  padding-top: 20px;
}

